<resources>
    <string name="app_name">ShopEBazar</string>

    <string name="powerby">Powered by Sales Genie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="show_all">View All</string>
    <string name="subscription_over">Your subscription has been over. Please contact administrator</string>
    <string name="response_success">success</string>
    <string name="response_fail">fail</string>

    <!--error messages-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="empty_firstname">Please enter firstname</string>
    <string name="empty_lastname">Please enter lastname</string>
    <string name="empty_middlename">Please enter middlename</string>
    <string name="empty_email">Please enter valid email id</string>
    <string name="invalid_mobile">Please enter valid mobile number</string>
    <string name="empty_password">Please enter password</string>
    <string name="empty_password_conf">Please enter confirm password</string>
    <string name="host_not_reachable">Host Server not reachable. Please try later.</string>
    <string name="nickname">Please enter nickname</string>
    <string name="summary_review">Please enter summary review</string>
    <string name="review">Please enter review</string>
    <string name="rating_error">Please give ratings</string>

    <string name="no_filter">No filter available</string>
    <string name="no_sorting">No sorting available</string>

    <!--hint messages-->
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile number</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_middlename">Middle Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_conf">Confirm Password</string>


    <!--lables-->
    <string name="lbl_clear">Clear</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_submit">Submit</string>
    <string name="forgot_lbl_submit">SUBMIT</string>
    <string name="lbl_login">LOGIN</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_sign_up">Sign Up</string>

    <!-- GCM -->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.
    </string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.
    </string>
    <!--<string name="gcm_SenderId">873741893252</string>-->
    <string name="gcm_SenderId">108887981894</string>
    <string name="server_ApiKey">AIzaSyCDrfnu3s0AuFeGJM2-XUHEyerdNxL4n9w</string>

    <string name="address_empty_selection">Please select address</string>

    <string name="order_place_success">Your order place successfully.</string>
    <string name="order_place_fail">Please did not place.\nTry later</string>

    <!-- Stripe payment -->
    <string name="card_number">Please enter card number</string>
    <string name="card_name">Please enter name</string>
    <string name="cvc">Please enter cvv</string>
    <string name="how_do_you_rate_this_product">How do you rate this product? </string>
    <string name="str_nickname">Nickname</string>
    <string name="str_summary_of_your_review">Summary of your review</string>
    <string name="str_review">Review</string>
    <string name="points_to_redeem">Points to redeem</string>
    <string name="reward_points_information">Reward Points Information</string>
    <string name="payu_test_merchant_key">gtKFFx</string>
    <string name="payu_live_merchant_key">miIwQpXY</string>
    <string name="lbl_invalid_email">Please enter valid email id</string>
    <string name="title_billnig_address">Billing Address</string>
    <string name="error_select_payment_method">Please select payment method</string>
    <string name="lbl_related_products">More Like This</string>
    <string name="lbl_fail_transaction_message">Your transaction has been failed</string>
    <string name="also_purchased">Also Purchased</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="shop_by_categories">Shop By Categories</string>
    <string name="show_all_reviews">Show all reviews</string>
    <string name="reviews">Reviews</string>
    <string name="share">Share</string>
    <string name="shipping_returns">Shipping &amp; Returns</string>
    <string name="shipping_text">Sorry, no quotes are available for this order at this time.</string>
    <string name="returns">Returns</string>
    <string name="return_policy"><b>Return Policy</b></string>
    <string name="specification">Specification</string>
    <string name="description">Description</string>
    <string name="feature_product">FEATURED PRODUCTS</string>
    <string name="hint_search">What are you looking for?</string>
    <string name="bestseller_products">BESTSELLER PRODUCTS</string>


    <string-array name="year_array">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>
    </string-array>

    <string-array name="month_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="rupee_sign">\u20B9</string>
    <string name="reorder">Reorder</string>
    <string name="empty_billing_address">Please enter atleast one billing address</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="dialog_msg_authenticating">Authenticating...</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="rating_review">Rating &amp; Review</string>
    <string name="buy_now">Buy Now</string>
    <string name="comming_soon">Comming Soon</string>
    <string name="contact_number">Contact Number</string>
</resources>
