<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_5">

        <TextView
            android:id="@+id/txt_product_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You're reviewing:" />

        <TextView
            android:id="@+id/txt_rate_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_do_you_rate_this_product"
            android:layout_marginTop="@dimen/margin_5"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5" />

        <TextView
            android:id="@+id/txt_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/str_nickname" />

        <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@drawable/btn_border_home"
            android:padding="@dimen/margin_5"
            android:singleLine="true"/>


        <TextView
            android:id="@+id/txt_summary_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/str_summary_of_your_review" />

        <EditText
            android:id="@+id/edt_summary_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@drawable/btn_border_home"
            android:padding="@dimen/margin_5"
            android:singleLine="true" />

        <TextView
            android:id="@+id/txt_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/str_review" />

        <EditText
            android:id="@+id/edt_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@drawable/btn_border_home"
            android:lines="4"
            android:gravity="start"
            android:padding="@dimen/margin_5"
            android:maxLines="4"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:text="SUBMIT"
            android:background="@color/colorPrimary"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>
