<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/margin_20"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/icon" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_inputlayout_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:drawableTint="@color/colorPrimary"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="@dimen/margin_5"
                android:hint="@string/hint_email"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin_10"
                android:singleLine="true"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_inputlayout_txt"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_inputlayout_txt"
            android:layout_marginTop="@dimen/margin_10"
            >

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_txt"
                android:drawableTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="@dimen/margin_5"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/margin_10"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Remember Me"
                android:buttonTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/forgot_password_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="right|end"
                android:textColor="@color/colorPrimary"
                android:text="@string/lbl_forgot_password"
                android:textSize="14sp" />

        </RelativeLayout>


        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/lbl_login"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/registration_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/lbl_sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>

    <!--<TextView-->
        <!--android:id="@+id/powerby_textview"-->
        <!--android:gravity="right"-->
        <!--android:paddingLeft="@dimen/margin_5"-->
        <!--android:paddingRight="@dimen/margin_5"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="@dimen/textsize_12"-->
        <!--android:background="@color/theme3_color"-->
        <!--android:text="@string/powerby"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
</RelativeLayout>
