<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">


        <TextView
            android:id="@+id/txt_lbl_add_detail_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="REGISTRATION"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginTop="1dp"
            android:src="@drawable/btn_back" />


    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.v7.widget.AppCompatButton
            android:layout_alignParentBottom="true"
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/lbl_submit"
            android:textAllCaps="true"
            android:background="@color/colorPrimary"
            android:textColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/submit_btn"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_5"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/firstname_inputlayout_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/firstname_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_firstname"
                        android:padding="@dimen/margin_5"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastname_inputlayout_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/lastname_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/hint_lastname"
                        android:padding="@dimen/margin_5"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_inputlayout_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/email_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/margin_5"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mobile_inputlayout_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/mobile_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/hint_mobile"
                        android:inputType="number"
                        android:padding="@dimen/margin_5"
                        android:lines="1"
                        android:maxLength="10"
                        android:text=""
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_inputlayout_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_txt"
                        android:layout_marginTop="16dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/margin_5"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_conf_inputlayout_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password_conf_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_txt"
                        android:layout_marginTop="16dp"
                        android:hint="@string/hint_password_conf"
                        android:inputType="textPassword"
                        android:padding="@dimen/margin_5"
                        android:singleLine="true"
                        android:textColor="@android:color/black" />


                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </ScrollView>
    </RelativeLayout>


</RelativeLayout>
