<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <ExpandableListView
            android:id="@+id/filter_expandable_listview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/filter_button_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerview"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginTop="16dp"
            android:weightSum="3">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/clear_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_weight="1"
                android:text="@string/lbl_clear"
                android:background="@color/colorPrimary"
                android:textColor="@color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_weight="1"
                android:text="@string/lbl_cancel"
                android:background="@color/colorPrimary"
                android:textColor="@color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/submit_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_weight="1"
                android:text="@string/lbl_submit"
                android:background="@color/colorPrimary"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>